Background fixed to avoid silly background repetition on mobile devices

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -38,6 +38,7 @@ body {
   background-color: $bg-color-main;
   background: url($main-bg);
   background-size: 100% 100%;
+  background-attachment: fixed;
   backdrop-filter: 
     saturate(200%) 
     brightness(140%)
